--- a/src/styles/routes/home.css
+++ b/src/styles/routes/home.css
@@ -1,10 +1,10 @@
-#image-container {
+.image-container {
     width: 100%;
-    height: 50vh; /* 50% of the viewport height */
+    height: 50vh; 
     overflow: hidden;
 }
 
-#image-container img {
+.image-container img {
     width: 100%;
     height: 100%;
     object-fit: cover;
