--- a/src/styles/components/navbar.css
+++ b/src/styles/components/navbar.css
@@ -1,6 +1,5 @@
 div.navbarContainer {
     display:flex;
-    gap: 78vw;
     background-color: white;
     width: 99.5vw;
     height: 4vh;
@@ -8,13 +7,22 @@ div.navbarContainer {
 }
 div.navLeft{
     padding-left: 2vw;
-    justify-content: left;
+    text-align: left;
     padding-top:0.5vh;
-    
+   
 }
 div.navRight{
+    margin-left: 72vw;
     padding-top: 0.5vh;
-    padding-right:1vw;
-    gap: 5vw;
+    padding-right:2vw;
+   
     text-align: right;
+}
+div.imgContainer{
+    img {
+        width: 100%;
+        height: 100%;
+        margin-left:.5vw;
+      }
+      
 }
