Sign In Covers Page
Looks a lot better and got a box behind the stuff.

--- a/src/styles/routes/signIn.css
+++ b/src/styles/routes/signIn.css
@@ -13,6 +13,8 @@
     background-image: url('../assets/skiMountains.jpg');
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
+    width: 100vw;
   }
   
   .signin-form {
