--- a/src/styles/routes/signIn.css
+++ b/src/styles/routes/signIn.css
@@ -3,6 +3,23 @@
     display: flex;
     flex-direction: column;
   }
+
+.signin-logo {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 2rem;
+  }
+
+.logo-image {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: white;
+    padding: 10px;
+    object-fit: contain;
+  }
   
   .signin-background {
     flex-grow: 1;
@@ -28,22 +45,9 @@
     width: 100%;
   }
 
-  .signin-logo {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 2rem;
-  }
-
-  .logo-image {
-    width: 100px;
-    height: auto;
-    margin-bottom: 1rem;
-  }
-
   .logo-text {
     font-size: 2rem;
-    color: #333;
+    color: white;
     margin: 0;
   }
 
@@ -62,6 +66,7 @@
     display: block;
     margin-bottom: 0.5rem;
     font-weight: bold;
+    color:black;
   }
 
   .form-input {
@@ -69,6 +74,8 @@
     padding: 0.5rem;
     border: 1px solid #ccc;
     border-radius: 4px;
+    color: black;
+    background-color: white;
   }
 
   .form-links {
