--- a/src/styles/routes/home.css
+++ b/src/styles/routes/home.css
@@ -1,11 +1,40 @@
-.image-container {
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
     width: 100%;
-    height: 50vh; 
-    overflow: hidden;
 }
 
-.image-container img {
+.backgroundImg {
+    height: 50vh;
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    background-image: url('src/assets/HiResMountain.jpg');
+    background-size: 100%;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.resortsCardContainer {
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: black;
+}
+
+.logo {
+    height: 256px;
+    width: 256px;
+}
+
+.title {
+    font-size: 4vw;
+    font-family: "Anonymous Pro", monospace;
+    text-shadow: 0 0 15px black;
 }
