--- a/src/styles/routes/signIn.css
+++ b/src/styles/routes/signIn.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   font-family: "Anonymous Pro", monospace;
+  
 }
 
 .logo-image {
@@ -30,12 +31,14 @@
   background-position: center;
   background-repeat: no-repeat;
   width: 100vw;
-  height: 100vh;
+  height: 90%
 }
 
 .signin-form {
   background-color: rgba(182, 182, 182, 0.849);
-  padding: 5rem 15rem;
+  padding: 3rem 5rem;
+  margin-top: 1rem;
+  border: 0px;
   border-radius: 0.5rem;
   box-shadow: 0 0 100px rgba(0, 0, 0, 0.1);
   z-index: 10;
@@ -112,4 +115,5 @@
   text-align: center;
   padding: 1rem;
   background-color: #f8f9fa;
+  font-size: small;
 }
