--- a/src/styles/components/navbar.css
+++ b/src/styles/components/navbar.css
@@ -6,6 +6,7 @@ div.navbarContainer {
     width: 100vw;
     border-style:solid;
     font-family: "Anonymous Pro";
+    font-size: calc(0.5vw + 10px);
 }
 div.navLeft{
     display: flex;
@@ -13,7 +14,7 @@ div.navLeft{
     padding-left: 2vw;
     text-align: left;
     padding-top:0.5vh;
-    width: 50%;
+    width: 30%;
    
 }
 div.navRight{
@@ -25,7 +26,7 @@ div.navRight{
     padding-right:2vw;
     gap: 1rem;
     text-align: right;
-    width: 50%;
+    width: 70%;
     
 }
 div.imgContainer{
