--- a/src/styles/routes/feedback.css
+++ b/src/styles/routes/feedback.css
@@ -1,12 +1,13 @@
 .feedback-container 
 {
     min-height: 25vh;
-    min-width: 50vh;
+    min-width: 80vh;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     font-family: "Anonymous Pro", monospace;
-    background-color:#f4f4f469;
+    background-color: #d9d9d9;
+
 }
 .outline-box 
 {
@@ -15,21 +16,39 @@
     padding: 20px;
     width: 100%;
     max-width: 600px;
-    background-color: #d9d9d986;
+    background-color: #d9d9d930;
+
 }
 label
 {
     display: block;
     margin-bottom: 10px;
     font-weight: bold;
+    margin-left: 100px;
 
 }
 textarea 
 {
-    width: 100%;
+    width: 200%;
     padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    border: 4px solid #000000;
+    border-radius: 5px;
     resize: none;
     margin-bottom: 20px;
+    margin-left: 100px;
+    
+}
+.backImg
+{
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    background-image: url('../assets/skiMountains.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100vw;
+    height: 100vh;
 }
