--- a/src/styles/routes/home.css
+++ b/src/styles/routes/home.css
@@ -6,7 +6,8 @@
     width: 100%;
 }
 
-.backgroundImg {
+.homeBackground {
+    position: relative;
     height: 50vh;
     width: 100%;
     background-image: url('src/assets/HiResMountain.jpg');
@@ -15,26 +16,30 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start; 
+    padding-top: 5vh;
 }
 
-.resortsCardContainer {
-    width: 100%;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: black;
+.homeBackground img.homeLogo {
+    height: 25vw; 
+    width: auto; 
+    max-width: 256px;
+    max-height: 256px;
 }
 
-.logo {
-    height: 256px;
-    width: 256px;
-}
-
-.title {
+.homeBackground .homeTitle {
     font-size: 4vw;
     font-family: "Anonymous Pro", monospace;
     text-shadow: 0 0 15px black;
+}
+
+.textContainer {
+    top: 50vh;
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: center;
+    justify-content: center;
+    align-items: center;
+    color: black;
 }
