--- a/src/styles/routes/feedback.css
+++ b/src/styles/routes/feedback.css
@@ -1,3 +1,10 @@
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    width: 100%;
+}
 .feedback-container 
 {
     min-height: 25vh;
@@ -7,6 +14,7 @@
     align-items: center;
     font-family: "Anonymous Pro", monospace;
     background-color: #d9d9d9;
+
 
 }
 .outline-box 
@@ -51,4 +59,18 @@ textarea
     background-repeat: no-repeat;
     width: 100vw;
     height: 100vh;
+}
+.logo
+{
+    height: 128px;
+    width: 128px;
+    position: absolute;
+    top: 25px;
+    
+}
+.title 
+{
+    font-size: 4vw;
+    font-family: "Anonymous Pro", monospace;
+    text-shadow: 0 0 15px black;
 }
