--- a/src/styles/routes/signIn.css
+++ b/src/styles/routes/signIn.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   font-family: "Anonymous Pro", monospace;
-  
+  width: 100%;
 }
 
 .logo-image {
@@ -30,7 +30,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 100vw;
+  width: 100%;
   height: 90%
 }
 
