--- a/src/styles/routes/resort.css
+++ b/src/styles/routes/resort.css
@@ -3,6 +3,7 @@
     width: 100%;
     grid-template-areas:
         "resortBackground"
+        "searchbar"
         "resortContentContainer";
 }
 
@@ -44,7 +45,45 @@
     height: 4vw;
 }
 
-.resortContainer .resortContentContainer {
+.searchbar {
+    grid-area: searchbar;
+    margin-top: 2vw;
+    margin-left: 10vw;
+    margin-right: 10vw;
+
+    justify-content: center;
+    align-items: center;
+
+    font-size: 1.5vw;
+    
+    font-family: "Anonymous Pro"," monospace";
+    color: black;
+    transition: margin-top 0.5s ease;
+}
+
+.textBar {
+    width: 80%;
+    padding: 10px; 
+    font-size: 1em; 
+    border: 1px solid #ccc; 
+    border-radius: 5px; 
+    margin-right: 10px;
+}
+
+.searchButton {
+    padding: 1vw 2vw; 
+    font-size: 1.5vw;
+    width: auto;
+    height: auto;
+
+    border: 2px solid black;
+    
+    border-radius: 5px;
+    color: white; 
+    cursor: pointer;
+}
+
+.resortContentContainer {
     grid-area: resortContentContainer;
     margin-left: 2vh;
     margin-right: 2vh;
