--- a/src/styles/components/resortCard.css
+++ b/src/styles/components/resortCard.css
@@ -48,9 +48,12 @@
 
 .visitPageButton {
     grid-area: visitPageButton;
+    height:80%;
+    width: 15vw;
+
     background-color: black;
     color:white;
-    width: 15vw;
+
     transition: transform 0.3s ease; 
 }
 
