--- a/src/styles/routes/home.css
+++ b/src/styles/routes/home.css
@@ -9,7 +9,7 @@
     
     grid-area: pageBackground;
 
-    height: 55vh;
+    height: 40vw;
     width: 100%;
     
     background-image: url('src/assets/HiResMountain.jpg');
