--- a/src/styles/routes/resort.css
+++ b/src/styles/routes/resort.css
@@ -11,7 +11,7 @@
     
     grid-area: resortBackground;
 
-    height: 55vh;
+    height: 35vw;
     width: 100%;
     
     background-image: url('src/assets/HiResMountain.jpg');
