--- a/src/styles/routes/signIn.css
+++ b/src/styles/routes/signIn.css
@@ -1,5 +1,5 @@
 .signin-container {
-  min-height: 100vh;
+  height: 96vh;
   display: flex;
   flex-direction: column;
   font-family: "Anonymous Pro", monospace;
@@ -7,8 +7,8 @@
 }
 
 .logo-image {
-  width: 100px;
-  height: 100px;
+  width: auto;
+  height: 18vw;
   object-fit: contain;
 }
 
@@ -26,10 +26,11 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  background-image: url('../assets/skiMountains.jpg');
-  background-size: cover;
-  background-position: center;
+  
+  background-image: url('src/assets/HiResMountain.jpg');
+  background-size: 100%;
   background-repeat: no-repeat;
+
   width: 100%;
   height: 90%
 }
