--- a/src/styles/routes/signIn.css
+++ b/src/styles/routes/signIn.css
@@ -1,50 +1,63 @@
 .signin-container {
   height: 96vh;
-  display: flex;
-  flex-direction: column;
-  font-family: "Anonymous Pro", monospace;
   width: 100%;
+
+  background-image: url('src/assets/HiResMountain.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  font-family: "Anonymous Pro", monospace;
+
+  display: flex;
+  justify-content: center;
 }
 
+.signin-form {
+  padding: 5vh 5vw;
+  padding-top: 3vh;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+  width: 100%;
+  height: auto;
+
+  background-color: rgba(182, 182, 182, 0.849);
+  border: 0px;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 100px rgba(0, 0, 0, 0.1);
+  max-width: 24rem;
+
+  display: grid;
+  grid-template-areas:
+    "signinLogo"
+    "form-group"
+    "form-links"
+    "form-submit"
+    "contact-info";
+}
+
+.signinLogo {
+  grid-area: signinLogo;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
 .logo-image {
-  width: auto;
-  height: 18vw;
+  width: 18vw;
+  max-width: 50%;
+  height: auto;
   object-fit: contain;
 }
 
 .signin-logo {
+
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-bottom: 2rem;
-}
-
-.signin-background {
-  flex-grow: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  
-  background-image: url('src/assets/HiResMountain.jpg');
-  background-size: 100%;
-  background-repeat: no-repeat;
-
-  width: 100%;
-  height: 90%
-}
-
-.signin-form {
-  background-color: rgba(182, 182, 182, 0.849);
-  padding: 3rem 5rem;
-  margin-top: 1rem;
-  border: 0px;
-  border-radius: 0.5rem;
-  box-shadow: 0 0 100px rgba(0, 0, 0, 0.1);
-  z-index: 10;
-  max-width: 24rem;
-  width: 100%;
 }
 
 .logo-text {
@@ -61,8 +74,12 @@
   align-items: center;
 }
 
-.form-group {
+.form-input {
   width: 100%;
+}
+
+.form-group {
+  width: 80%;
   margin-bottom: 1rem;
 }
 
