--- a/src/styles/routes/home.css
+++ b/src/styles/routes/home.css
@@ -6,7 +6,7 @@
 }
 
 .pageBackground {
-    
+    position: relative;
     grid-area: pageBackground;
 
     height: 35vw;
@@ -16,6 +16,8 @@
     background-size: 100%;
     background-repeat: no-repeat;
 
+    justify-items:center;
+
     grid-template-columns:
         "logo"
         "title";
@@ -24,9 +26,19 @@
     
 }
 
+.pageBackground::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 33%;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+    pointer-events: none; 
+}
+
 .logo {
     grid-area: logo;
-    padding-left: 41vw;
     width: auto;
     height: 18vw;
 
@@ -34,7 +46,6 @@
 
 .title {
     grid-area: title;
-    padding-left: 42vw;
 
     font-size: 4vw;
     font-family: "Anonymous Pro", monospace;
