--- a/src/styles/components/resortInfo.css
+++ b/src/styles/components/resortInfo.css
@@ -9,10 +9,10 @@
 }
 
 .indvBackground {
-    
+    position: relative;
     grid-area: indvBackground;
 
-    height: 55vh;
+    height: 30vw;
     width: 100%;
     
     background-image: url('src/assets/HiResMountain.jpg');
@@ -27,6 +27,17 @@
 
     padding-top: 5vh;
     margin-bottom: 10vh;
+}
+
+.indvBackground::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 33%;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+    pointer-events: none; 
 }
 
 .indvLogo {
