--- a/src/styles/routes/feedback.css
+++ b/src/styles/routes/feedback.css
@@ -1,30 +1,31 @@
 .fcontainer {
     display: grid;
     width: 100%;
-    color: black;
-    grid-template-areas:
-        "fbackground"
-        "feedbackDisplay";
-}
-.fbackground {
-    grid-area: fbackground;
-    height: 70vw;
-    min-height: 70vh;
 
-    justify-items: center;
-
-    background-image: url('src/assets/review-background.jpg');
+    background-image: url('src/assets/feedback-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-
-    display: grid;
+    
     grid-template-areas:
+        "fbackground"
+        "feedback-container"
+        "feedbackDisplay";
+}
+.fbackground {
+    position: relative;
+    grid-area: fbackground;
+
+    height: 70vw;
+    width: 100%;
+
+    justify-items:center;
+    grid-template-columns:
         "flogo"
-        "ftitle"
-        "feedback-container";
+        "ftitle";
 
     padding-top: 5vh;
+    margin-bottom: 10vh;
     
 }
 
@@ -45,8 +46,6 @@
     justify-self: center;
     align-items: top;
 
-    transform: translateY(-3vw);
-
     font-size: 4vw;
     font-family: "Anonymous Pro", monospace;
     text-shadow: 0 0 15px black;
@@ -66,6 +65,8 @@
     font-family: "Anonymous Pro", monospace;
     background-color: rgba(217,217,217,0.8);
 
+    border-radius: 20px;
+
     margin-bottom: 4vw;
 }
 
@@ -76,12 +77,20 @@
 }
 
 .textarea {
-    width: 100%;
+    width: 40vw;
     padding: 10px;
     border: 4px solid #000000;
     border-radius: 5px;
     resize: none;
     margin-bottom: 20px;
+}
+
+.thisfeedback {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 2vw;
 
 }
 
@@ -93,7 +102,7 @@
     
     display: flex;
     flex-direction: column;
-    align-items: flex-start; 
+    align-items: center; 
 }
 
 .starRating {
